--- a/myblog-server/src/main/resources/templates/fragment.html
+++ b/myblog-server/src/main/resources/templates/fragment.html
@@ -35,8 +35,8 @@
       <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==2} ? 'active'" th:href="@{/types/-1}"><i class="idea icon"></i>分类</a>
       <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==3} ? 'active'" th:href="@{/tags/-1}"><i class="tags icon"></i>标签</a>
       <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==4} ? 'active'" th:href="@{/archives}"><i class="clock icon"></i>归档</a>
-      <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==8} ? 'active'" th:href="@{/chat}"><i class="comments icon"></i>聊天</a>
-      <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==6} ? 'active'" th:href="@{/messages}"><i class="mail icon"></i>留言</a>
+<!--      <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==8} ? 'active'" th:href="@{/chat}"><i class="comments icon"></i>聊天</a>-->
+<!--      <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==6} ? 'active'" th:href="@{/messages}"><i class="mail icon"></i>留言</a>-->
       <a href="#" class="m-item item m-mobile-hide" th:classappend="${n==5} ? 'active'" th:href="@{/about}"><i class="info icon"></i>关于</a>
       <div class="right m-item item m-mobile-hide ">
         <form action="#" th:action="@{/search}" target="_blank" name="search" method="post">
