fix:footer无法最下方显示bug修复

--- a/myblog-server/src/main/resources/templates/about.html
+++ b/myblog-server/src/main/resources/templates/about.html
@@ -71,8 +71,10 @@
   </div>
 
   <!--底部footer-->
+  <br/>
+  <br/>
 
-  <footer th:replace="fragment :: footer" class="ui inverted vertical segment m-padded-tb-massive"></footer>
+  <footer th:replace="fragment :: footer" class="ui inverted vertical segment m-padded-tb-massive my-footer"></footer>
 
   <div th:replace="fragment::basic-script"></div>
 
