--- a/myblog-server/src/main/resources/templates/admin/blogs-input.html
+++ b/myblog-server/src/main/resources/templates/admin/blogs-input.html
@@ -102,6 +102,12 @@
               <label for="commentabled">评论</label>
             </div>
           </div>
+          <div class="field">
+            <div class="ui checkbox">
+              <input type="checkbox" id="ossImg" name="ossImg" class="hidden">
+              <label for="ossImg">图片上传oss</label>
+            </div>
+          </div>
         </div>
 
         <div class="ui error message"></div>
